Reorganize responsive elements - Fix layout issues - Add heart in menus

--- a/Assets/css/components/_card.scss
+++ b/Assets/css/components/_card.scss
@@ -60,7 +60,7 @@
             right: 0;
             bottom: 0;
             left: 0;
-            top: 0;
+            top: 1px;
             height: 100%;
             width: 100%;
             // background-image: linear-gradient(to bottom right, $color-secondary, $color-primary );
