--- a/Assets/css/layouts/_footer.scss
+++ b/Assets/css/layouts/_footer.scss
@@ -1,22 +1,36 @@
 .footer {
     background-color: darken($bg-color-primary, 80%);
     color: $bg-color-primary;
-    padding-bottom: map-get($padding, large);
+    padding: map-get($padding, large);
     ul {
         margin: map-get($margin, none);
+        display: flex;
+        flex-direction: column;
+        padding-left: 0;
+
+        @include for-tablet {
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: center;
+        }
+
         li {
             list-style: none;
             padding: map-get($padding, xsmall);
+            
+            .fas {
+                width: 20px;
+            }
         }
     }
     &__logo {
         display: inline-block;
         mask: url($logo) no-repeat;
-        mask-size: 50%;
+        mask-size: 100%;
         background-color: $bg-color-primary;
-        width: 200px;
-        height: 15px;
-        margin: map-get($margin, large) map-get($margin, none);
+        width: 98px;
+        height: 17px;
+        margin: map-get($margin, medium);
     }
     &__contact {
         text-decoration: none;
