--- a/Assets/css/utils/_variables.scss
+++ b/Assets/css/utils/_variables.scss
@@ -13,7 +13,7 @@ $shadow-color: darken($bg-color-primary, 15%);
 $shadow-size: .5em;
 
 $padding: (none:0, xsmall: 2px, small:7px, medium:12px, large:20px);
-$margin: (none:0, large:20px);
+$margin: (none:0, medium: 10px, large:20px);
 
 $menu-bg-img: (
 menu1: "../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg",
